force-app/main/default/objects/CustomerPerOrg__c/CustomerPerOrg__c.object-meta.xml
<CustomObject>
    <description>Armazenará as configurações de clientes por organização.</description>
    
    <label>Cliente por Organização</label>
    <nameField>
        <displayFormat>CPO-{000000}</displayFormat>
        <label>Nome de Clientes por Organização</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes por Organização</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>