force-app/main/default/objects/CustomerPerOrg__c/fields/RTVExternalIds__c.field-meta.xml
<CustomField>
    <fullName>RTVExternalIds__c</fullName>
    <label>Códigos Externos Dos RTVs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>