force-app/main/default/objects/CustomerPerOrg__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Clientes por Organização</relationshipLabel>
    <relationshipName>CustomerPerOrg</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>