force-app/main/default/objects/CustomerPerOrg__c/fields/SalesSector__c.field-meta.xml
<CustomField>
    <fullName>SalesSector__c</fullName>
    <label>Setor de Vendas (Regional)</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>