force-app/main/default/objects/CustomerPerOrg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Blocked__c</columns>
    <columns>ClientGroup__c</columns>
    <columns>DistributionChannel__c</columns>
    <columns>SalesOrg__c</columns>
    <columns>ActivitySector__c</columns>
    <columns>SalesSector__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>